# pynamodb-study

./: README.md  crud.py  custom_attributes.py  pyproject.toml
basic/: optimistic_locking.py  polymorphism.py  transaction.py
