[tool.poetry]
name = "pynamodb-study"
version = "0.1.0"
description = ""
authors = ["jaeyoung0509 <jaeyoung0509@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynamodb = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
